--- a/templates/registration.htm
+++ b/templates/registration.htm
@@ -162,7 +162,7 @@ Registration Form
 {% endif %}
 <form method="POST" action="/registeruser" name="form" id="form">
 {% csrf_token %} 
-  <table border="0"  cellpadding="3" cellspacing="1" style="width:70% !important;font-size:14px;" align=center>
+  <table border="0"  cellpadding="3" cellspacing="1" style="width:75% !important;font-size:14px;" align=center>
   <tr>
     <td colspan="2">{% if message or error_message %}
       <p class="style5">{{ message }} <span class="style8 style1">{{ error_message }}</span></p>
@@ -222,18 +222,6 @@ Registration Form
   <tr bgcolor="#FFFFFF"><td colspan="2"><input type="submit" name="btnSubmit" /></td></tr>
 </table>       
 </form>
-</div></div></div>
-</div>
-<div class="height12 clr"></div>
-
-
-
-
-
-
-
-</div>
-<div class="float-left width10"></div>
-
-</div>
+</div></div></div></div>
+ 
 {% include 'footer.htm' %}
