--- a/templates/admin_header.htm
+++ b/templates/admin_header.htm
@@ -59,7 +59,7 @@ mm_menu_0311194645_0.writeMenus();
 		<li><a href="/customers?page=1">Customers</a>
 			<ul>
 				<li><a href="/customers?page=1">View/Edit</a></li>
-				<li><a href="/addcusotmers">Add Customer</a></li>
+				<li><a href="/baddcustomer">Add Customer</a></li>
 				<li><a href="/exportcustomers">Import/Export</a></li>
 			</ul>
 		</li>
@@ -110,7 +110,7 @@ mm_menu_0311194645_0.writeMenus();
 		
 		<li><a href="/admins">Users</a>
 		<ul><li><a href="/admins">View/Edit</a></li>
-		<li><a href="/addadminsform">Add User</a></li>
+		<li><a href="addadminsform?mode=add">Add User</a></li>
 		</ul>
 				</li>
 		<li><a href="/logout">Logout</a></li>
