--- a/misc/style.css
+++ b/misc/style.css
@@ -630,6 +630,9 @@ padding-top:10px;}
 .per30{width:30%}
 .per100%{width:100%}
 
+
+.wid28{width:28px}
+.wid57{width:57px}
 .wid66{width:66px}
 .wid103{width:103px}
 .wid113{width:113px}
@@ -644,12 +647,14 @@ padding-top:10px;}
 .wid239{width:239px}
 .wid230{width:230px}
 .wid257{width:257px}
+.wid400{width:400px}
 .wid69{width:69px}
 .wid763{width:763px}
 .wid207{width:207px}
 .wid187{width:187px}
 .wid500{width:500px}
 .wid50{width:50px}
+.wid69{width:69px}
 .wid670{width:670px}
 .wid748{width:748px}
 .wid157{width:157px}
@@ -668,17 +673,25 @@ background-color:#d9d9d9;
 background-repeat:repeat-x;
 }
 
+.border-line2
+{
+height:1px; background-color:#d9d9d9; background-repeat:repeat-y
+}
+
 .width-line
 {
 width:1px; 
 background-color:#d9d9d9; 
 background-repeat:repeat-y
 }
-
+.bg-height1{clear:both; height:1px; background-color:#dedede}
 .height30{height:30px;line-height:30px}
 .height12{height:12px;}
 .height9{height:9px;}
 .height23{height:23px;}
+.height2{height:2px;} 
+.height1{height:1px;} 
+.height60{height:60px;}
 
 .pad28{padding-top:28px;}
 .pad5{padding-right:5px;}
@@ -750,6 +763,7 @@ background-repeat:repeat-y
 .martop28{margin-top:28px;}
 .martop29{margin-top:29px;}
 .martop30{margin-top:30px;}
+.margintop3{margin-top:-3px;}
 
 .padright1{padding-right:1px;}
 .padright2{padding-right:2px;}
@@ -845,8 +859,10 @@ background-repeat:repeat-y
 .padleft29{padding-left:29px;}
 .padleft30{padding-left:30px;}
 .padleft40{padding-left:40px;}
+.padleft50{padding-left:50px;}
 .padleft120{padding-left:120px;}
 .padleft150{padding-left:150px;}
+.padleft100{padding-left:100px;}
 
 
 .marleft1{margin-left:1px;}
@@ -882,6 +898,7 @@ background-repeat:repeat-y
 .mar_left30{margin-left:-30px;}
 .marleft80{margin-left:80px;}
 .marleft120{margin-left:120px;}
+.margin-leftie78{*margin-left:78px;}
 
 
 
@@ -3469,12 +3486,21 @@ line-height:70px
 .pwid15{ width:763px; }
 .pwid16{ width:128px; }
 .pwid17{ width:71px; }
+.pwid18{clear:both; width:800px; height:21px; line-height:21px;}
+.pwid19{padding-left:10px; 	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #000000;}
+	.pwid20{border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #000000;}
 
 .height25{ height:25px; }
 .height20{ height:20px; }
 .height35{ height:35px; }
 .height62{ height:62px; }
 .height10{height:10px;}
+.height15{height:15px;}
+.height1{height:1px;}
 
 .valign-top{ vertical-align:top; }
 .valign-middle{ vertical-align:middle; }
@@ -3484,7 +3510,7 @@ line-height:70px
 .product-order{ float:left; width:100px; line-height:80px;  height:80px; border-left:solid 1px #dedede; padding:10px; }
 .product-order1{ float:left; width:100px;  height:100px; border-left:solid 1px #dedede; text-align:center; }
 .product-order2{float:left; width:220px;  height:80px; line-height:80px;  border-left:solid 1px #dedede; padding:10px; text-align:center; }
-.product-order3{ float:left; height:80px; line-height:80px; border-left:solid 1px #dedede; padding:10px; padding-left:10px; width:100px; text-align:center; }
+.product-order3{ float:left; height:80px; line-height:80px; border-left:solid 1px #dedede; padding:10px; padding-left:10px; width:80px; text-align:center; }
 .product-order4{float:left; height:80px; border-left:solid 1px #dedede; padding:10px; padding-left:10px; width:100px; text-align:center; }
 .product-order5{float:left; width:220px;  height:80px;  border-left:solid 1px #dedede; padding:10px; text-align:center; }
 .product-order6{float:left; width:220px; height:80px;  border-left:solid 1px #dedede; padding:10px; text-align:center; }
@@ -3495,6 +3521,7 @@ line-height:70px
 .bg4{ width:1020px; padding:10px 0px; background-color:#dedede; margin:0px auto; text-align:center; }
 .bg5{background-color:#ffbe00; height:28px; border-bottom-width: 1px;	border-bottom-style: solid;	border-bottom-color: #000000;}
 .bg6{height:248px; padding-top:15px; background-color:#c3f2fa;	border-bottom-width: 1px;	border-bottom-style: solid;	border-bottom-color: #000000; }
+.bg7{height:1px; background-color:#d1d1d1;}
 
 .order-list{ width:130px; padding-left:20px; vertical-align:top; text-align:left; }
 .order-left{ width:128px; height:52px; padding-left:10px; padding-top:0px; border-right-width: 1px;	border-right-style: solid;	border-right-color: #000000;}
@@ -3993,10 +4020,17 @@ line-height:normal
 .shipping2{float:left; width:152px;   height:30px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede;padding:10px; }
 .shipping-bg{height:1px; background-color:#dedede; width:375px; clear:both}
 
-.height23{ height:23px; }
 .height12{ height:12px; }
 .height32{ height:32px; }
 .height30{ height:30px; }
+.height54{height:54px;}
+.height50{height:50px;}
+.height70{height:70px;}
+.height242{height:242px;}
+.height40{height:40px;}
+
+
+
 .lheight40{  height:40px; line-height:40px;}
 .lheight30{ height:30px; line-height:30px; }
 .wid10{ width:10px; }
@@ -4004,18 +4038,25 @@ line-height:normal
 .wid32{ width:32px; }
 .wid440{ width:440px; }
 .wid130{ width:130px ; }
+.wid100{ width:100px ; }
 .wid70{ width:70px ; }
 .wid170{ width:170px ; }
 .wid140{ width:140px ; }
 .wid160{width:160px; }
-.wid50{ width:50px; }
 .wid150{ width:150px; }
+.wid155{ width:155px; }
 .wid380{ width:380px; }
 .wid115{ width:115px; }
 .wid114{ width:114px; }
+.wid250{ width:250px; }
+.wid300{ width:300px; }
+.wid303{ width:303px; }
+.wid150{ width:150px; }
+.wid200{ width:200px; }
 .wid270{ width:270px; }
 .wid662{ width:662px; }
 .wid393{ width:393px; }
+.wid350{ width:350px; }
 .wid54{ width:54px; }
 .wid55{ width:55px; }
 .wid85{ width:85px; }
@@ -4023,6 +4064,8 @@ line-height:normal
 .wid90{ width:90px; }
 .wid190{ width:190px; }
 .wid73{ width:73px; }
+.wid650{ width:650px; }
+.wid240{ width:240px; }
 .wid695{ width:695px; }
 .wid209{ width:209px; }
 .wid800{ width:800px; }
@@ -4032,8 +4075,10 @@ line-height:normal
 .wid177{ width:177px; }
 .wid122{ width:122px; }
 .wid176{ width:176px; }
+.wid50per{ width:50% }
 .wid66{ width:66px; }
 .wid257{ width:257px; }
+.wid722{ width:722px; }
 .mar-less{ margin-left:-30px; }
 .lh{ line-height:18px; }
 .height-lh25{ line-height:25px; height:25px; }
@@ -4043,10 +4088,19 @@ line-height:normal
 .padleft0{ padding-left:0; }
 .padleft55{padding-left:55px;}
 .padleft340{ padding-left:340px; }
+.padleft270{ padding-left:270px; }
 .pad-tb5{ padding:5px 0px; }
 .zindex{ clear:both; padding-bottom:30px; z-index:0}
 .bg7{ background-color:#dddddd; height:4px; }
-
+.bg8{background-color:#cecece; height:1px;}
+.bg9{background-color:#dedede; height:1px;}
+.bg10{background-color:#dedede; height:5px;}
+.bg11{float:left; width:120px; background-color:#f1f1f1}
+.bg12{background-color:#efefef; padding-left:10px; padding-top:3px; padding-bottom:3px; margin-top:10px;}
+.bg13{background-color:#efefef; padding-left:10px; padding-top:3px; padding-bottom:3px;}
+.bg14{clear:both; height:30px; padding-top:10px; background-color:#efefef}
+.bg15{border:solid 1px #999999}
+.adjustments{clear:both; padding-left:15px; padding-top:5px; padding-bottom:5px; background-color:#636363}
 .admin{ float:left; width:380px;   height:15px; border-left:solid 1px #dedede; padding:10px; text-align:right; }
 .admin-span{height:31px; line-height:31px; width:282px; }
 .admin1{ float:left; width:70px;  height:15px; border-left:solid 1px #dedede; padding:10px; }
@@ -4183,3 +4237,105 @@ line-height:normal
 .blue-bg-boxs3{clear:both; height:300px; border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: #000000; padding-left:5px; padding-right:5px; padding-top:5px;}
+	
+.black-width{background-color: Black; width:28px;}
+.gray-width{background-color: Gray;  width:28px;}
+.dark-gray{background-color: DarkGray;  width:28px;}
+.light-gray{background-color: LightGrey;  width:28px;}
+.white{background-color: White;  width:28px;}
+.aquamarine{background-color: Aquamarine;  width:28px;}
+.blue{background-color: Blue;  width:28px;}
+.navy{background-color: Navy; width:28px;}
+.purple{background-color: Purple;  width:28px;}
+.deeppink{background-color: DeepPink;  width:28px;}
+.violet{background-color: Violet;  width:28px;}
+.pink{background-color: Pink;  width:28px;}
+.darkgreen{background-color: DarkGreen;  width:28px;}
+.green{background-color: Green; width:28px;}
+.yellowgreen{background-color: YellowGreen;  width:28px;}
+.yellow{background-color: Yellow;  width:28px;}
+.ora{background-color: Orange;  width:28px;}
+.red1{background-color: Red;  width:28px;}
+.brown{background-color: Brown;  width:28px;}
+.burlywood{background-color: BurlyWood;  width:28px;}
+.beige{background-color: Beige;  width:28px;}
+.border-bot{padding-left:10px; border-bottom:none;}
+
+
+.marleft78{*margin-left:78px;}
+.marleft48{*margin-left:48px;}
+.marleft52{*margin-left:52px;}
+.head_bgpad{clear:both; padding-top:5px; margin-top:20px;}
+.order_id{float:left; padding-left:20px; width:140px;}
+.order_name{float:left; padding-left:20px;width:330px;}
+.order_action{float:left; padding-left:20px; width:200px;}
+.order_id_txt{float:left; width:150px; height:15px; border-left:solid 1px #dedede; padding:10px;}
+.order_name_txt{float:left; width:330px;  height:15px; border-left:solid 1px #dedede; padding:10px;}
+.order_stock_txt{float:left; width:50px;  height:15px; border-left:solid 1px #dedede; padding:10px;}
+.order_stock_box{float:left; width:235px;   height:15px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede;padding:10px;}
+.height15{clear:both; height:15px;}
+.pad_top0{clear:both; padding-top:0px;}
+.customer_export_img{float:left; padding-right:30px; padding-top:170px; padding-left:10px;}
+.customer_imported_line{height:1px; clear:both; background-color:#cecece;}
+.padleft110{padding-left:110px;}
+	
+.padtop50{ padding-top:50px; }
+
+.settiong1{ float:left; padding-left:10px;  width:25px; }
+.settiong2{ float:left; text-align:center; width:250px; }
+.settiong3{ float:left; text-align:center;  width:70px; }
+.settiong4{ float:left; text-align:center;  width:90px; }
+.settiong5{ float:left; text-align:center;  width:80px; }
+.settiong6{ float:left; text-align:center;  width:82px; }
+
+.set1{ float:left; padding-left:10px;  width:25px; line-height:50px;   height:50px; border-left:solid 1px #dedede; border-bottom:solid 1px #dedede; }
+.set2{ float:left; width:250px;  height:50px;  border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; }
+.set3{ float:left; width:80px; text-align:center;  padding-left:0px;  height:50px; line-height:50px; border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; }
+.set4{ float:left;  width:90px;  padding-left:0px;  height:50px; border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; line-height:50px; text-align:center; }
+.set5{float:left; width:70px;  padding-left:0px;  border-bottom:solid 1px #dedede; line-height:50px;  height:50px; border-left:solid 1px #dedede; text-align:center; }
+.set6{ float:left; width:88px;     border-bottom:solid 1px #dedede;  height:50px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede; text-align:center; }
+
+.setbg1{ height:4px; background-color:#d9d9d9; background-repeat:repeat-y }
+.setbg2{height:3px; background-color:#d9d9d9; background-repeat:repeat-y }
+.marleft40{ margin-left:40px; }
+.wid550{ float:left; width:550px; }
+.setting-txt1{float:left; width:120px; margin-left:20px; margin-top:30px; }
+.setting-txt2 { float:left; width:96px; height:21px; text-align:center; padding-top:3px;}
+.setting-txt3 {float:left; width:116px; height:21px; text-align:center; padding-top:3px; margin-top:15px; }
+.padleft90{ padding-left:90px; }
+.fpm{ float:left; padding-left:10px; padding-top:5px; }
+
+.padtop50{ padding-top:50px; }
+
+.settiong1{ float:left; padding-left:10px;  width:25px; }
+.settiong2{ float:left; text-align:center; width:250px; }
+.settiong3{ float:left; text-align:center;  width:70px; }
+.settiong4{ float:left; text-align:center;  width:90px; }
+.settiong5{ float:left; text-align:center;  width:80px; }
+.settiong6{ float:left; text-align:center;  width:82px; }
+
+.set1{ float:left; padding-left:10px;  width:25px; line-height:50px;   height:50px; border-left:solid 1px #dedede; border-bottom:solid 1px #dedede; }
+.set2{ float:left; width:250px;  height:50px;  border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; }
+.set3{ float:left; width:80px; text-align:center;  padding-left:0px;  height:50px; line-height:50px; border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; }
+.set4{ float:left;  width:90px;  padding-left:0px;  height:50px; border-left:solid 1px #dedede;  border-bottom:solid 1px #dedede; line-height:50px; text-align:center; }
+.set5{float:left; width:70px;  padding-left:0px;  border-bottom:solid 1px #dedede; line-height:50px;  height:50px; border-left:solid 1px #dedede; text-align:center; }
+.set6{ float:left; width:88px;     border-bottom:solid 1px #dedede;  height:50px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede; text-align:center; }
+
+.setbg1{ height:4px; background-color:#d9d9d9; background-repeat:repeat-y }
+.setbg2{height:3px; background-color:#d9d9d9; background-repeat:repeat-y }
+.marleft40{ margin-left:40px; }
+.wid550{ float:left; width:550px; }
+.setting-txt1{float:left; width:120px; margin-left:20px; margin-top:30px; }
+.setting-txt2 { float:left; width:96px; height:21px; text-align:center; padding-top:3px;}
+.setting-txt3 {float:left; width:116px; height:21px; text-align:center; padding-top:3px; margin-top:15px; }
+.padleft90{ padding-left:90px; }
+.fpm{ float:left; padding-left:10px; padding-top:5px; }
+.ordering3{float:left; width:110px; height:15px; border-left:solid 1px #dedede; padding:10px;}
+.ordering4{float:left; width:300px;  height:15px; border-left:solid 1px #dedede; padding:10px;}
+.ordering5{float:left; width:50px;  height:15px; border-left:solid 1px #dedede; padding:10px;}
+.ordering6{float:left; width:252px;   height:15px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede;padding:10px;}
+.ordering7{clear:both; padding-left:15px; padding-top:5px; padding-bottom:5px; background-color:#636363}
+.wish-red {color: #FF0000}
+.wid-height{width:37px; height:15px;}
+.option-pro{width:190px; background-color:#FFFFFF; height:40px; margin:0px auto}
+.backcolor{background-color:#f7f7f7; clear:both}
